[gd_scene load_steps=24 format=2]

[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/16 sin título_20220603214524.png" type="Texture" id=3]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Opciones/32 sin título_20220615093836.png" type="Texture" id=4]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/14 sin título_20220603120738.png" type="Texture" id=5]
[ext_resource path="res://Escenas/Interfaces/Menu/Select_profile.gd" type="Script" id=6]
[ext_resource path="res://Main Resources/Fuentes/PixelatedPusab.ttf" type="DynamicFontData" id=10]

[sub_resource type="Shader" id=86]
code = "shader_type canvas_item;

uniform vec4 color : hint_color = vec4(1.0);
uniform float width : hint_range(0, 10) = 1.0;
uniform int pattern : hint_range(0, 2) = 0; // diamond, circle, square
uniform bool inside = false;
uniform bool add_margins = true; // only useful when inside is false

void vertex() {
	if (add_margins) {
		VERTEX += (UV * 2.0 - 1.0) * width;
	}
}

bool hasContraryNeighbour(vec2 uv, vec2 texture_pixel_size, sampler2D texture) {
	for (float i = -ceil(width); i <= ceil(width); i++) {
		float x = abs(i) > width ? width * sign(i) : i;
		float offset;
		
		if (pattern == 0) {
			offset = width - abs(x);
		} else if (pattern == 1) {
			offset = floor(sqrt(pow(width + 0.5, 2) - x * x));
		} else if (pattern == 2) {
			offset = width;
		}
		
		for (float j = -ceil(offset); j <= ceil(offset); j++) {
			float y = abs(j) > offset ? offset * sign(j) : j;
			vec2 xy = uv + texture_pixel_size * vec2(x, y);
			
			if ((xy != clamp(xy, vec2(0.0), vec2(1.0)) || texture(texture, xy).a == 0.0) == inside) {
				return true;
			}
		}
	}
	
	return false;
}

void fragment() {
	vec2 uv = UV;
	
	if (add_margins) {
		vec2 texture_pixel_size = vec2(1.0) / (vec2(1.0) / TEXTURE_PIXEL_SIZE + vec2(width * 2.0));
		
		uv = (uv - texture_pixel_size * width) * TEXTURE_PIXEL_SIZE / texture_pixel_size;
		
		if (uv != clamp(uv, vec2(0.0), vec2(1.0))) {
			COLOR.a = 0.0;
		} else {
			COLOR = texture(TEXTURE, uv);
		}
	} else {
		COLOR = texture(TEXTURE, uv);
	}
	
	if ((COLOR.a > 0.0) == inside && hasContraryNeighbour(uv, TEXTURE_PIXEL_SIZE, TEXTURE)) {
		COLOR.rgb = inside ? mix(COLOR.rgb, color.rgb, color.a) : color.rgb;
		COLOR.a += (1.0 - COLOR.a) * color.a;
	}
}"

[sub_resource type="ShaderMaterial" id=88]
shader = SubResource( 86 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 2.539
shader_param/pattern = 2
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="DynamicFont" id=89]
size = 40
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=95]
size = 20
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxTexture" id=70]

[sub_resource type="StyleBoxTexture" id=71]

[sub_resource type="StyleBoxTexture" id=72]

[sub_resource type="StyleBoxTexture" id=73]

[sub_resource type="StyleBoxTexture" id=74]

[sub_resource type="StyleBoxTexture" id=75]

[sub_resource type="Theme" id=90]
HScrollBar/styles/grabber = SubResource( 70 )
HScrollBar/styles/grabber_highlight = SubResource( 70 )
HScrollBar/styles/grabber_pressed = SubResource( 70 )
HScrollBar/styles/scroll = SubResource( 70 )
HScrollBar/styles/scroll_focus = SubResource( 71 )
VScrollBar/styles/grabber = SubResource( 70 )
VScrollBar/styles/grabber_highlight = SubResource( 72 )
VScrollBar/styles/grabber_pressed = SubResource( 73 )
VScrollBar/styles/scroll = SubResource( 74 )
VScrollBar/styles/scroll_focus = SubResource( 75 )

[sub_resource type="DynamicFont" id=100]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=97]
resource_name = "focus"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.307786, 0.0426889 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -17, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_size")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.307786, 0.0426889 ),
"update": 0,
"values": [ Vector2( 252, 40 ), Vector2( 287, 46 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("name:custom_fonts/font:size")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 0.307786, 0.0412348 ),
"update": 0,
"values": [ 16, 20 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("name:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.307786, 1 ),
"update": 0,
"values": [ Vector2( 9, 10.5 ), Vector2( 26.4951, 13.4992 ) ]
}

[sub_resource type="DynamicFont" id=103]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=106]
resource_name = "focus"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.307786, 0.041235 ),
"update": 0,
"values": [ Vector2( 0, 57 ), Vector2( -17, 54.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_size")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.307786, 0.0426889 ),
"update": 0,
"values": [ Vector2( 252, 40 ), Vector2( 287, 46 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("name:custom_fonts/font:size")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 0.307786, 0.041235 ),
"update": 0,
"values": [ 16, 20 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("name:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.307786, 1 ),
"update": 0,
"values": [ Vector2( 9, 10.5 ), Vector2( 26.4951, 13.4992 ) ]
}

[sub_resource type="DynamicFont" id=104]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=108]
resource_name = "focus"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.307786, 0.041235 ),
"update": 0,
"values": [ Vector2( 0, 115 ), Vector2( -17, 112 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_size")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.307786, 0.0426889 ),
"update": 0,
"values": [ Vector2( 252, 40 ), Vector2( 287, 46 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("name:custom_fonts/font:size")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 0.307786, 0.041235 ),
"update": 0,
"values": [ 16, 20 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("name:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.307786, 1 ),
"update": 0,
"values": [ Vector2( 9, 10.5 ), Vector2( 26.4951, 13.4992 ) ]
}

[sub_resource type="Animation" id=101]
resource_name = "appear"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("options:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.517632, 1.03527 ),
"update": 0,
"values": [ Vector2( 109.5, -523.5 ), Vector2( 109.5, 44.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:X")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.22, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("black:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Select_profile_window" type="CanvasLayer"]
layer = 4
script = ExtResource( 6 )

[node name="black" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )

[node name="options" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -402.5
margin_top = -255.5
margin_right = 402.5
margin_bottom = 255.5
__meta__ = {
"_edit_group_": true
}

[node name="Window" type="TextureRect" parent="options"]
material = SubResource( 88 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -392.0
margin_top = -256.5
margin_right = 392.0
margin_bottom = 256.5
texture = ExtResource( 5 )
expand = true

[node name="tittle" type="Label" parent="options"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -112.0
margin_top = 23.0
margin_right = 113.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 89 )
text = "Archivos"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="info" type="Label" parent="options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -195.5
margin_top = -114.0
margin_right = 195.5
margin_bottom = -71.0
custom_fonts/font = SubResource( 95 )
text = "Por favor... selecciona un archivo
presiona C para mas informacion..."
align = 1
valign = 1

[node name="BttnsScroll" type="Control" parent="options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.5
margin_top = -64.5
margin_right = 126.5
margin_bottom = 90.5
theme = SubResource( 90 )

[node name="Profile1" type="TextureButton" parent="options/BttnsScroll"]
anchor_left = 0.5
anchor_top = 0.129
anchor_right = 0.5
anchor_bottom = 0.129
margin_left = -126.0
margin_top = -19.995
margin_right = 126.0
margin_bottom = 20.005
rect_pivot_offset = Vector2( 125, 20 )
texture_normal = ExtResource( 4 )
expand = true

[node name="name" type="Label" parent="options/BttnsScroll/Profile1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.0
margin_top = -9.0
margin_right = 117.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0.956863, 1, 0, 1 )
custom_fonts/font = SubResource( 100 )
text = "DaniGamer88"
align = 1
valign = 1
clip_text = true

[node name="anim" type="AnimationPlayer" parent="options/BttnsScroll/Profile1"]
anims/focus = SubResource( 97 )

[node name="Profile2" type="TextureButton" parent="options/BttnsScroll"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.0
margin_top = -20.5
margin_right = 126.0
margin_bottom = 19.5
rect_pivot_offset = Vector2( 125, 20 )
texture_normal = ExtResource( 4 )
expand = true

[node name="name" type="Label" parent="options/BttnsScroll/Profile2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.0
margin_top = -9.5
margin_right = 117.0
margin_bottom = 10.5
custom_colors/font_color = Color( 0.956863, 1, 0, 1 )
custom_fonts/font = SubResource( 103 )
text = "DaniGamer88"
align = 1
valign = 1
clip_text = true

[node name="anim" type="AnimationPlayer" parent="options/BttnsScroll/Profile2"]
anims/focus = SubResource( 106 )

[node name="Profile3" type="TextureButton" parent="options/BttnsScroll"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -126.0
margin_top = -40.0
margin_right = 126.0
rect_pivot_offset = Vector2( 125, 20 )
texture_normal = ExtResource( 4 )
expand = true

[node name="name" type="Label" parent="options/BttnsScroll/Profile3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.0
margin_top = -9.5
margin_right = 117.0
margin_bottom = 10.5
custom_colors/font_color = Color( 0.956863, 1, 0, 1 )
custom_fonts/font = SubResource( 104 )
text = "DaniGamer88"
align = 1
valign = 1
clip_text = true

[node name="anim" type="AnimationPlayer" parent="options/BttnsScroll/Profile3"]
anims/focus = SubResource( 108 )

[node name="cadena" type="TextureRect" parent="options"]
margin_left = 104.0
margin_top = -113.0
margin_right = 144.0
margin_bottom = 16.0
texture = ExtResource( 3 )

[node name="cadena2" type="TextureRect" parent="options"]
margin_left = 662.0
margin_top = -113.0
margin_right = 702.0
margin_bottom = 16.0
texture = ExtResource( 3 )

[node name="animacion" type="AnimationPlayer" parent="."]
autoplay = "appear"
anims/appear = SubResource( 101 )

[connection signal="focus_entered" from="options/BttnsScroll/Profile1" to="." method="_on_Profile1_focus_entered"]
[connection signal="focus_exited" from="options/BttnsScroll/Profile1" to="." method="_on_Profile1_focus_exited"]
[connection signal="pressed" from="options/BttnsScroll/Profile1" to="." method="_on_Profile1_pressed"]
[connection signal="focus_entered" from="options/BttnsScroll/Profile2" to="." method="_on_Profile2_focus_entered"]
[connection signal="focus_exited" from="options/BttnsScroll/Profile2" to="." method="_on_Profile2_focus_exited"]
[connection signal="pressed" from="options/BttnsScroll/Profile2" to="." method="_on_Profile2_pressed"]
[connection signal="focus_entered" from="options/BttnsScroll/Profile3" to="." method="_on_Profile3_focus_entered"]
[connection signal="focus_exited" from="options/BttnsScroll/Profile3" to="." method="_on_Profile3_focus_exited"]
[connection signal="pressed" from="options/BttnsScroll/Profile3" to="." method="_on_Profile3_pressed"]
